feat: validate mod dependencies and expose metadata